clap_derive/tests/ui/enum_flatten.stderr
error: `flatten` is usable only with single-typed tuple variants
  --> $DIR/enum_flatten.rs:14:5
   |
14 |     #[clap(flatten)]
   |     ^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/enum_flatten.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
